--- a/views/input.erb
+++ b/views/input.erb
@@ -1,1 +1,13 @@
 <h3> Put in your list of things and stuff</h3>
+
+<form action='/' method= 'post'>
+  <div class = "form-group">
+    <label for="name"> To do:</label>
+    <input id="name" name= "name" class= "form-control" type="text">
+  </div>
+  <div class = "form-group">
+    <label for="description"> Describe it:</label>
+    <input id="description" name= "description" class= "form-control" type="text">
+  </div>
+  <button type="submit" class="btn btn-primary"> Add It</button>
+</form>
